# publisher_logos

./: finance_network_logo.png:Zone.Identifier  generate_adjusted_logos.ipynb  generate_adjusted_logos.py  pyproject.toml
placeholder_contact_photo/: ms_no_photo.png:Zone.Identifier
